# tof-legacy-recovery-workbench

./: .gitignore  Dockerfile  MANIFEST.md  NOTICE.md  README.md  README_DE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
00_input_alt/: README.md
00_input_alt/examples/: bot_module.py  discord_channels.txt  docker-compose.yml  entrypoint
docs/: 01_overview.md  02_pipeline.md  03_public_boundary.md  04_demo_walkthrough.md  05_target_class_logic.md  06_acceptance.md  07_cli.md
scripts/: demo_run.sh  reset_demo.sh
src/tof_workbench/: acceptance.py  cli.py  duplicates.py  evidence.py  extractors.py  hypotheses.py  intake.py  io_utils.py  mapping.py  models.py  pathing.py  pipeline.py
tests/: test_cli_parser.py  test_input_metadata.py  test_smoke.py  test_target_classes.py
