[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tof-legacy-recovery-workbench"
version = "0.1.0"
description = "Public-safe recovery workbench baseline for legacy material separation and mapping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tof-workbench = "tof_workbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
